<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center">







        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:elevation="2dp"
            android:layout_marginTop="8dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="Select Blood Group" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_groups">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/groupSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/blood_groups_only"
                    android:padding="12dp" />

            </LinearLayout>

        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/placeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/placeTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:padding="12dp" />

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/rTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneTextInput"
                android:hint="@string/requestor_phone"
                android:inputType="phone"
                android:padding="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/lldatePiclker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateInputLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextInput"
                android:inputType="textPersonName"
                android:hint="@string/requirement_date"
                android:padding="12dp"/>

        </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageDate"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:tint="#444444"
                android:src="@drawable/ic_date"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/messageTextInput"
                android:inputType="textPersonName"
                android:hint="@string/message"
                android:padding="12dp"/>

        </android.support.design.widget.TextInputLayout>




        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post__request"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/btnRegister"/>

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

</LinearLayout>
</ScrollView>