<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:elevation="4dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/whitesquarebg"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ccDonorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_blood_drop_avatar" />


            <!--<ImageView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:srcCompat="@drawable/ic_blood_drop_avatar" />-->


            <TextView
                android:id="@+id/bloodGroupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                tools:text="AB+"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />
        </android.support.constraint.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/location" />


            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="end"
                tools:text="Kozhikode"
                android:text="" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/posted_by" />


            <TextView
                android:id="@+id/postmanTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="end"
                tools:text="Aflah"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/phone" />


            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="end"
                tools:text="9123456780"
                android:text="" />

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/postman_number" />


            <TextView
                android:id="@+id/secondPhoneTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="end"
                tools:text="9999888877"
                android:text="" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/posted_date" />


            <TextView
                android:id="@+id/postDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="end"
                tools:text="23-10-2019"
                android:text="" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/due_date" />


            <TextView
                android:id="@+id/requiredDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="end"
                tools:text="23-10-2019"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:text="@string/message" />


            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp"
                android:gravity="start"
                tools:text="This is a message added by the Posted Person about the request while posting."
                android:text="" />

        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/callPoster"
            android:layout_marginTop="16dp"
            android:layout_marginVertical="8dp"
            android:drawableTint="@color/white"
            style="@style/MyButton"
            android:textColor="@color/white"
            android:id="@+id/btnCallOne"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/callrequestor"
            android:layout_marginVertical="8dp"
            style="@style/MyButton"
            android:textColor="@color/white"
            android:id="@+id/btnCallTwo"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/whatsappposted"
            android:drawableTint="@color/white"
            android:layout_marginVertical="8dp"
            style="@style/MyButton"
            android:textColor="@color/white"
            android:id="@+id/btnWhatsapp"/>

    </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>