<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:transitionName="logo"
            android:layout_gravity="center"
            android:src="@drawable/icon_kerala"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

    </FrameLayout>


    <LinearLayout
        android:id="@+id/llsignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/white_squircle"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/AppTheme.WhiteEditText"
            app:errorTextAppearance="@style/AppTheme.EditTextError"
            android:layout_marginBottom="10dp">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:theme="@style/AppTheme.WhiteEditText"
                android:maxEms="10"
                android:minEms="10"
                android:inputType="phone"
                android:padding="20dp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            style="@style/MyButton"
            android:elevation="4dp"
            android:textColor="@color/white"

            tools:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:background="@drawable/white_squircle"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lTextOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/AppTheme.WhiteEditText"
        app:errorTextAppearance="@style/AppTheme.EditTextError"
        android:layout_marginBottom="10dp" >



        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otpTextInput"
            android:hint="@string/hint_otp"
            android:inputType="numberDecimal"
            android:theme="@style/AppTheme.WhiteEditText"
            android:maxEms="10"
            android:minEms="10"
            android:padding="20dp" />

    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/MyButton"
            android:elevation="4dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            tools:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btnChangeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:text="Change Number"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp" />


    </LinearLayout>


    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="Register"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:text="Forgot Password"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="SKIP "
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/llsignin"
        app:layout_constraintTop_toBottomOf="@+id/llsignin"
        tools:text="Skip " />

</android.support.constraint.ConstraintLayout>